--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,7 +7,7 @@
     "import/no-extraneous-dependencies": [
       "error", 
       { "devDependencies": [
-        "spec/**/*.mjs",
+        "test/**/*.mjs",
         "**/*.spec.mjs"
         ]
       }
