--- a/test/docker-compose/docker-compose.yml
+++ b/test/docker-compose/docker-compose.yml
@@ -12,4 +12,15 @@ services:
       interval: '3s'
       timeout: '2s'
       retries: 10
-
+  wiremock:
+    build: './wiremock'
+    container_name: 'wiremock'
+    ports: 
+      - 8080:8080
+    healthcheck:
+      test:
+        - 'CMD-SHELL'
+        - 'wget --spider http://localhost:8080/__admin/mappings'
+      interval: '3s'
+      timeout: '2s'
+      retries: 10
